:bug::lipstick: challenge card overflow

--- a/styles/components/_challenge_card.scss
+++ b/styles/components/_challenge_card.scss
@@ -61,11 +61,15 @@
             display: flex;
             align-items: flex-start;
             justify-content: center;
-            transform: scale(0.8);
+            transform: scale(0.75);
             transform-origin: top center;
 
             .chat-bubble,
             .profile-points {
+                display: none;
+            }
+
+            .challenge-info-button {
                 display: none;
             }
         }
@@ -103,7 +107,6 @@
 
     @include respond-to("small") {
         width: 300px;
-        height: 225px;
         margin: $small-padding;
 
         .challenge-front,
@@ -113,6 +116,10 @@
 
         .flip-hint {
             font-size: font-size("100");
+        }
+
+        button {
+            font-size: font-size("200");
         }
     }
 }
