--- a/styles/components/_challenge_info.scss
+++ b/styles/components/_challenge_info.scss
@@ -6,7 +6,7 @@
     background-color: color("dark");
     border-radius: $small-border-radius;
     min-width: 150px;
-    max-width: 80vw;
+    max-width: 100%;
     font-size: font-size("200");
     box-shadow: 0 4px 6px rgba(color("dark"), 0.1);
 
@@ -33,14 +33,18 @@
 
     @include respond-to("medium") {
         min-width: 250px;
-        font-size: font-size("400");
-        padding: $small-padding * 1.5;
+    }
+
+    @include respond-to("small") {
+        min-width: 100px;
+        font-size: font-size("100");
 
         .challenge-description,
         .tasks-info,
         .unlock-points-info {
             p {
-                margin-bottom: $small-padding * 1.5;
+                margin-bottom: 0;
+                line-height: 1.1;
             }
         }
     }
